src/AntiDuplWPF/AntiDupl/AntiDupl.h

#define MAX_PATH 260
#define MAX_PATH_EX 32768

    typedef __int32 adInt32;

    typedef unsigned __int32 adUInt32;

    typedef unsigned __int64 adUInt64;


    typedef adUInt8* adUInt8Ptr;


    typedef adInt32 adBool;

    typedef size_t adSize;

    typedef adSize* adSizePtr;

    typedef char adCharA;

    typedef adCharW adPathW[MAX_PATH_EX];


    /*------------Structures-----------------------------------------------------*/

    struct adSearchOptions
    {
        bool system;
        bool hidden;
        bool JPEG;
        bool BMP;
        bool GIF;
        bool PNG;
        bool TIFF;
        bool EMF;
        bool WMF;
        bool EXIF;
        bool ICON;
        bool JP2;
        bool PSD;
		bool DDS;
		bool TGA;
    };


    struct adCompareOptions //так же должен быть определен в CoreDll.cs и похоже в CoreCompareOptions.cs
    {
        adBool checkOnEquality;    
        adBool transformedImage;    
        adBool sizeControl;
        adBool typeControl;
        adBool ratioControl;
        adInt32 thresholdDifference;
        adInt32 minimalImageSize;
		adInt32 maximalImageSize;
        adBool compareInsideOneFolder;
		adBool compareInsideOneSearchPath;
		adAlgorithmComparing algorithmComparing;
    };

	
    struct adDefectOptions
    {
        adBool checkOnDefect;
        adBool checkOnBlockiness;
        adInt32 blockinessThreshold;
		adBool checkOnBlockinessOnlyNotJpeg;
        adBool checkOnBlurring;
        adInt32 blurringThreshold;
    };


    struct adAdvancedOptions
    {
        adBool deleteToRecycleBin;
        adBool mistakeDataBase;
        adInt32 ratioResolution;
        adInt32 compareThreadCount;
        adInt32 collectThreadCount;
        adInt32 reducedImageSize;
        adInt32 undoQueueSize;
        adInt32 resultCountMax;        
        adInt32 ignoreFrameWidth;
    };


    struct adStatistic
    {
        adSize scanedFolderNumber;
        adSize searchedImageNumber;
        adSize collectedImageNumber;
        adSize comparedImageNumber;
        adSize collectThreadCount;
        adSize compareThreadCount;
        adSize defectImageNumber;
        adSize duplImagePairNumber;
        adSize renamedImageNumber;
        adSize deletedImageNumber;
        adUInt64 deletedImageSize;
    };


    struct adStatusW
    {
        adStateType state;
        adPathW path;
        adSize current;
        adSize total;
    };
	#define MAX_EXIF_SIZE 260


	struct adExifInfoW
	{
		adBool isEmpty;
		adCharW imageDescription[MAX_EXIF_SIZE];
		adCharW equipMake[MAX_EXIF_SIZE];
		adCharW equipModel[MAX_EXIF_SIZE];
		adCharW softwareUsed[MAX_EXIF_SIZE];
		adCharW dateTime[MAX_EXIF_SIZE];
		adCharW artist[MAX_EXIF_SIZE];
		adCharW userComment[MAX_EXIF_SIZE];
	};


	// Структура для взаимодействия dll, передает нужные параметры из структуры TImageInfo
    struct adImageInfoW
    {
        adSize id;
        adPathW path;
        adUInt64 size;
        adUInt64 time;
        adImageType type;
        adUInt32 width;
        adUInt32 height;
 		double blockiness;
		double blurring;
		adExifInfoW exifInfo;
   };


    struct adResultW
    {
        adResultType type;
        adImageInfoW first;
        adImageInfoW second;
        adDefectType defect;
        double difference;
        adTransformType transform;
        adSize group;
		adSize groupSize;
        adHintType hint;
    };


	struct adGroup
	{
		adSize id;
		adSize size;
	};


    struct adBitmap
    {
        adUInt32 width;
        adUInt32 height;
        adInt32 stride;
        adPixelFormat format;
        adUInt8Ptr data;
    };


    /*------------Functions-------------------------------------------------------*/

    DLLAPI adError adVersionGet(adVersionType versionType, adCharA * pVersion, adSizePtr pVersionSize);

    DLLAPI adError adRelease();


	DLLAPI adError adStop();